--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,8 @@
 #Grails Metadata file
-#Sat Sep 22 16:47:03 COT 2012
+#Mon Oct 15 16:36:39 COT 2012
 app.grails.version=2.1.0
 app.name=KahuuServicios
 app.version=1.0
 plugins.google-analytics=2.0
+plugins.jquery-ui=1.8.15
 plugins.mail=1.0
