--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -8,6 +8,8 @@ encoding//.link_to_grails_plugins/mail-1.0/grails-app/i18n/messages.properties=U
 encoding//.link_to_grails_plugins/mail-1.0/grails-app/i18n/messages_fr.properties=UTF-8
 encoding//.link_to_grails_plugins/resources-1.1.6/grails-app/i18n=UTF-8
 encoding//.link_to_grails_plugins/resources-1.1.6/grails-app/i18n/messages.properties=UTF-8
+encoding//.link_to_grails_plugins/searchable-0.6.4/grails-app/i18n=UTF-8
+encoding//.link_to_grails_plugins/searchable-0.6.4/grails-app/i18n/messages.properties=UTF-8
 encoding//grails-app/i18n=UTF-8
 encoding//grails-app/i18n/.DS_Store=UTF-8
 encoding//grails-app/i18n/messages.properties=UTF-8
