--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,8 @@
 #Grails Metadata file
-#Mon Oct 15 19:14:56 COT 2012
+#Mon Nov 05 18:36:42 COT 2012
 app.grails.version=2.1.1
 app.name=KahuuServicios
 app.version=2.0
 plugins.google-analytics=2.0
 plugins.mail=1.0
+plugins.searchable=0.6.4
