--- a/.project
+++ b/.project
@@ -26,7 +26,7 @@
 		<link>
 			<name>.link_to_grails_plugins</name>
 			<type>2</type>
-			<locationURI>GRAILS_ROOT/2.1.1/projects/KahuuServicios/plugins</locationURI>
+			<location>/Users/gal/.grails/2.1.1/projects/KahuuServicios/plugins</location>
 		</link>
 	</linkedResources>
 </projectDescription>
